<resources>
    <string name="app_name">Logica</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="letter_A">A</string>
    <string name="letter_B">B</string>
    <string name="letter_F">F</string>
    <string name="letter_T">T</string>
    <string name="letter_A_AND_B">A ^ B</string>
    <string name="confirm">confirm</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="answerTrueTrue">T</string>
    <string name="answerRest">F</string>
</resources>
