<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="233dp"
        android:text="@string/letter_F"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etFalseFalse"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginBottom="233dp"
        android:text="@string/letter_F"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginBottom="39dp"
        android:text="@string/letter_F"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintEnd_toStartOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="91dp"
        android:text="@string/letter_T"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView32"
        app:layout_constraintEnd_toStartOf="@+id/etFalseTrue"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="39dp"
        android:text="@string/letter_T"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView31"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="39dp"
        android:text="@string/letter_F"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView30"
        app:layout_constraintEnd_toStartOf="@+id/etTrueFalse"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:layout_marginTop="44dp"
        android:text="@string/conjunction"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="55dp"
        android:text="@string/letter_A"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="91dp"
        android:text="@string/letter_T"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintEnd_toStartOf="@+id/etTrueTrue"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_marginTop="277dp"
        android:text="@string/letter_T"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="55dp"
        android:text="@string/letter_B"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="97dp"
        android:layout_height="36dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="55dp"
        android:text="@string/letter_A_AND_B"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/etTrueTrue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etTrueTrue"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etTrueFalse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/etTrueFalse"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etFalseTrue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/etTrueTrue" />

    <EditText
        android:id="@+id/etFalseTrue"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etFalseFalse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/etTrueFalse" />

    <EditText
        android:id="@+id/etFalseFalse"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginBottom="227dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/etFalseTrue" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.907" />

</androidx.constraintlayout.widget.ConstraintLayout>